<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.uottawa.cali.AssignmentActivity"
    android:orientation="vertical"
    android:padding="0dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:paddingBottom="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/courseColor1"
                android:orientation="horizontal"
                android:onClick="changeCourse">
                <TextView
                    android:id="@+id/courseTextViewActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dynamic_text_unset"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_heading_1"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dynamic_text_unset"
                android:textSize="@dimen/text_heading_1"
                android:textColor="@color/textEmphasis"
                android:enabled="false"/>
            <TextView
                android:id="@+id/completeTextViewAssignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complete_header_assignment"
                android:textSize="@dimen/text_heading_2"/>
            <SeekBar
                android:id="@+id/completeSeekBarAssignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="changeComplete"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/due_header_assignment"
                android:textSize="@dimen/text_heading_2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priority_header_assignment"
                android:textSize="@dimen/text_heading_2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_header_assignment"
                android:textSize="@dimen/text_heading_2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dynamic_text_unset"
                android:textSize="@dimen/text_paragraph"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="addFile">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_attach"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Add File"
                        android:gravity="center_vertical"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="addLink">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_link"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Add Link"
                        android:gravity="center_vertical"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
